--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script scr="./main.js"></script>
+    <script src='./main.js'></script>
 </body>
 </html>
